Adding licence and readme

--- a/PowerPlanSwitcher/PowerPlanSwitcher.csproj
+++ b/PowerPlanSwitcher/PowerPlanSwitcher.csproj
@@ -118,10 +118,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="Resources\AppIcon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AppIcon.ico" />
+    <None Include="LICENSE" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
