Code cleanup, adding icons

--- a/PowerPlanSwitcher/App.config
+++ b/PowerPlanSwitcher/App.config
@@ -10,12 +10,6 @@
     </startup>
     <userSettings>
         <PowerPlanSwitcher.Properties.Settings>
-            <setting name="batEnabled" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="idleEnabled" serializeAs="String">
-                <value>True</value>
-            </setting>
             <setting name="batLevel" serializeAs="String">
                 <value>50</value>
             </setting>
@@ -30,6 +24,12 @@
             </setting>
             <setting name="pollInterval" serializeAs="String">
                 <value>5000</value>
+            </setting>
+            <setting name="batEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="idleEnabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </PowerPlanSwitcher.Properties.Settings>
     </userSettings>
